--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "scripts": {
     "git-cz": "node git-cz.js",
+    "release": "standard-version",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,6 +28,7 @@
     "commitizen": "^3.0.5",
     "cz-conventional-changelog": "^2.1.0",
     "ghooks": "^2.0.4",
+    "standard-version": "^4.4.0",
     "validate-commit-msg": "^2.14.0"
   }
 }
